# libML

./: .clang_complete  .clang_complete_linux  .clang_complete_linux_backup  .clang_complete_win  .dir-locals-linux.el  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt
MLCore/: CMakeLists.txt  exceptions.h  mathmatrixpredefined.cpp  mathmatrixpredefined.h  mathsparsetypes.h  mathtypes.h  splinebasis.h  timeseriesdata.cpp  timeseriesdata.h
MLCore/unit_test/: CMakeLists.txt  test_mlcore.cpp
MLGaussian/: CMakeLists.txt  gaussianinterpolation.cpp  gaussianinterpolation.h  gaussianinterpolationnoisy.cpp  gaussianinterpolationnoisy.h
MLGaussian/unit_test/: CMakeLists.txt  test_gaussianinterp.h  test_mlgaussian.cpp
MLInterpolation/: CMakeLists.txt  gaussianinterpolation.cpp  gaussianinterpolation.h  gaussianinterpolationnoisy.cpp  gaussianinterpolationnoisy.h  interpolation.cpp  interpolation.h  interpolationtypes.h  multilevelbsplineinterpolation.cpp  multilevelbsplineinterpolation.h
MLInterpolation/unit_test/: CMakeLists.txt  test_gaussianinterp.h  test_mlgaussian.cpp
MLRegression/: CMakeLists.txt  gaussianprocess.cpp  gaussianprocess.h  gpoptimizerrprop.cpp  gpoptimizerrprop.h  kernelfunction.cpp  kernelfunction.h  kernelsquaredexponential.cpp  kernelsquaredexponential.h  regression.cpp  regression.h  trainingdataset.cpp  trainingdataset.h
cmake/modules/: gmock.cmake
ml/: CMakeLists.txt
ml/core/: mathmatrixpredefined.cpp  mathmatrixpredefined.h  mathsparsetypes.h  mathtypes.h  splinebasis.h  timeseriesdata.cpp  timeseriesdata.h
ml/interpolation/: gaussianinterpolation.cpp  gaussianinterpolation.h  gaussianinterpolationnoisy.cpp  gaussianinterpolationnoisy.h  interpolation.cpp  interpolation.h  multilevelbsplineinterpolation.cpp  multilevelbsplineinterpolation.h
ml/regression/: gaussianprocess.cpp  gaussianprocess.h  gpoptimizerrprop.cpp  gpoptimizerrprop.h  kernelfunction.cpp  kernelfunction.h  kernelsquaredexponential.cpp  kernelsquaredexponential.h  regression.cpp  regression.h  trainingdataset.cpp  trainingdataset.h
ml_test/: CMakeLists.txt  test_gaussianinterp.h  test_mlcore.cpp
source/: .clang-format  CMakeLists.txt
source/cmake/modules/: gmock.cmake
source/libml/: CMakeLists.txt
source/libml/include/ml/core/: exceptions.h  mathmatrixpredefined.h  mathsparsetypes.h  mathtypes.h  splinebasis.h  timeseriesdata.h
source/libml/include/ml/interpolation/: gaussianinterpolation.h  gaussianinterpolationnoisy.h  interpolation.h  interpolationtypes.h  multilevelbsplineinterpolation.h
source/libml/include/ml/regression/: gaussianprocess.h  gpoptimizerrprop.h  kernelfunction.h  kernelsquaredexponential.h  regression.h  trainingdataset.h
source/libml/src/core/: mathmatrixpredefined.cpp  timeseriesdata.cpp
source/libml/src/interpolation/: gaussianinterpolation.cpp  gaussianinterpolation_imple.h  gaussianinterpolationnoisy.cpp  gaussianinterpolationnoisy_imple.h  interpolation.cpp  multilevelbsplineinterpolation.cpp  multilevelbsplineinterpolation_imple.h
source/libml/src/regression/: gaussianprocess.cpp  gpoptimizerrprop.cpp  kernelfunction.cpp  kernelsquaredexponential.cpp  regression.cpp  trainingdataset.cpp
source/libml_test/: CMakeLists.txt
source/libml_test/include/: test_gaussianinterp.h
source/libml_test/src/: test_mlcore.cpp  test_mlgaussian.cpp
src/: main.cpp
